--- a/mileshareApp/Info.plist
+++ b/mileshareApp/Info.plist
@@ -41,5 +41,29 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb211202592765882</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>211202592765882</string>
+    <key>FacebookDisplayName</key>
+    <string>森田 宣広's first app</string>
+    
+    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
