--- a/mileshareApp/Info.plist
+++ b/mileshareApp/Info.plist
@@ -42,7 +42,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
     
-    
+
     <key>CFBundleURLTypes</key>
     <array>
         <dict>
@@ -65,5 +65,24 @@
         <string>fbauth2</string>
         <string>fbshareextension</string>
     </array>
+    
+    <key>CFBundleIconFiles</key>
+    <array>
+        <string>Icon.png</string>
+        <string>Icon@2x.png</string>
+        <string>Icon-60.png</string>
+        <string>Icon-60@2x.png</string>
+        <string>Icon-72.png</string>
+        <string>Icon-72@2x.png</string>
+        <string>Icon-76.png</string>
+        <string>Icon-76@2x.png</string>
+        <string>Icon-Small-50.png</string>
+        <string>Icon-Small-50@2x.png</string>
+        <string>Icon-Spotlight-40.png</string>
+        <string>Icon-Spotlight-40@2x.png</string>
+        <string>Icon-Small.png</string>
+        <string>Icon-Small@2x.png</string>
+    </array>
+
 </dict>
 </plist>
